# ai4ci-federated-learning

./: .gitignore  README.md  quick_check.py
quickstart-pytorch/: analysis.py  generate_data.py  pyproject.toml
quickstart-pytorch/data/: client_0.pt  client_1.pt  client_10.pt  client_11.pt  client_12.pt  client_13.pt  client_14.pt  client_15.pt  client_16.pt  client_17.pt  client_18.pt  client_19.pt  client_2.pt  client_20.pt  client_21.pt  client_22.pt  client_23.pt  client_24.pt  client_25.pt  client_26.pt  client_27.pt  client_28.pt  client_29.pt  client_3.pt  client_30.pt  client_31.pt  client_32.pt  client_33.pt  client_34.pt  client_35.pt  client_36.pt  client_37.pt  client_38.pt  client_39.pt  client_4.pt  client_40.pt  client_41.pt  client_42.pt  client_43.pt  client_44.pt  (+10 more)
quickstart-pytorch/pytorchexample/: client_app.py  data.py  model.py  server_app.py
quickstart-pytorch/results/tp2_baselines/: fedavg_alpha_0.01.json  fedavg_alpha_1.json  fedavg_alpha_100.json
quickstart-pytorch/results/tp2_fedprox/: fedprox_alpha_0.01.json  fedprox_alpha_1.json  fedprox_alpha_100.json
quickstart-pytorch/results/vary_algo/: fedavg_adam.json  fedavg_sgd.json  fedsgd.json
quickstart-pytorch/results/vary_alpha/: alpha_0.1.json  alpha_100.0.json  alpha_5.0.json
quickstart-pytorch/results/vary_clients/: clients_20.json  clients_5.json
quickstart-pytorch/results/vary_fraction/: fraction_0.1.json  fraction_0.5.json
