[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.0.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
# C- Data generation parameters
num-clients = 50
alpha-dirichlet = 100
data-dir = "./data"

# A- Server-side parameters
num-server-rounds = 50
fraction-train = 1.0
learning-rate = 0.01
seed = 42

# B- Local training parameters
local-epochs = 3
batch-size = 64

client-optimizer = "sgd"       # "sgd" or "adam"
client-algorithm = "fedavg"    # "fedavg" or "fedsdg"

fedprox-mu = 0.1